fix(drying-room): prevent add machine button from collapsing

--- a/src/app/drying-room/components/drying-room-form/drying-room-form.component.scss
+++ b/src/app/drying-room/components/drying-room-form/drying-room-form.component.scss
@@ -23,6 +23,11 @@
   margin-bottom: 16px;
 }
 
+.add-machine-button {
+  flex-shrink: 0; /* Impede que o botão encolha */
+  
+}
+
 :host ::ng-deep .mat-mdc-dialog-content {
   display: flex;
   flex-direction: column;
